installer: minimize deployment

--- a/deploy/installer.conf
+++ b/deploy/installer.conf
@@ -6,6 +6,9 @@ TARGET_HOSTNAME=debconf19
 INSTALL_PACKAGE=curitiba
 LINUX_CMDLINE="biosdevname=0 net.ifnames=0"
 
+# Do not install man pages, /usr/share/doc/*, locales, ...
+MINIMIZE=1
+
 SFDISK="unit: sectors
 label: dos
 swap: Id=82, size=512M, start=2048
