--- a/deploy/lxd.conf
+++ b/deploy/lxd.conf
@@ -9,4 +9,4 @@ INSTALL_PACKAGE=curitiba-container
 #
 # lxc image import curitiba_2019_0.6.tar.xz
 # lxc launch 4113c960cdef         # replace hash
-# lxc exec usable-crab su admin   # replae container name
+# lxc exec useful-crab su admin   # replae container name
