--- a/deploy/lxd.conf
+++ b/deploy/lxd.conf
@@ -7,6 +7,6 @@ INSTALL_PACKAGE=curitiba-container
 
 # Installation
 #
-# lxc image import curitiba_2019_0.6.tar.xz
+# lxc image import curitiba_2019_0.7_lxd.tar.xz
 # lxc launch 4113c960cdef         # replace hash
 # lxc exec useful-crab su admin   # replae container name
